# Voxel-Engine-OpenGL

./: CMakeLists.txt  Jak debugowac.txt  LegacyBrudnopis.txt  README.md  TODO.txt  brudnopis.txt  vc140.idb
Dependencies/include/glad/: glad.h
Dependencies/src/: glad.c
Header Files/: Block.h  Camera.h  Chunk.h  ChunkLoader.h  Crosshair.h  PhysicsEngine.h  Player.h  Shader.h  Texture.h  UniformBuffer.h  Vao.h
Shaders Code/: crossHairFShader.txt  fragmentShader.txt  vertexShader.txt
Src/: OpenGL.cpp
Vertices Data/: cubeVertices.txt
